bin/testsuite/tests/compiler/src/errors/compiler585.swg
#global testerror "Err0720"
func(op: string) toto() {}

#test
{
    var c = 0
    toto'(c)()
}
